--- a/style.css
+++ b/style.css
@@ -1,8 +1,33 @@
+* {
+  scrollbar-width: none;
+}
+
 body {
   background-color: #111;
   color: white;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+}
+
+.dropdown {
+  background-color : #000;
+  padding: 8px;
+  border-radius: 4px;
+  top: 100%;
+  right: 0;
+  width: 100px;
+  margin-top: 3px;
+  opacity: 0;
+}
+
+.dropdown span {
+  cursor: pointer;
+}
+
+
+.profile:hover .dropdown {
+  opacity: 1;
 }
 
 header {
@@ -36,6 +61,7 @@ header {
   overflow-x: scroll;
   white-space: nowrap;
   padding: 10px;
+  scrollbar-width: none;
 }
 
 .poster {
